# laba2

./: CMakeLists.txt  complex.cpp  complex.h  main.cpp  menu.cpp  menu.h  polynom.cpp  polynom.h  sequence.cpp  sequence.h
Array/: ArrSeq.cpp  ArrSeq.h  DynArray.cpp  DynArray.h
List/: LinkedList.cpp  LinkedList.h  ListSeq.cpp  ListSeq.h
tests/: test.cpp  test.h
